--- a/css/style.css
+++ b/css/style.css
@@ -39,11 +39,14 @@ ul {
 
 /* Оформение шапки */
 
-.header {
-  background-color: #ccc;
+.header-div,
+.header-nav {
+  display: flex;
+  align-items: center;
 }
 
 .logo {
+  margin-right: 93px;
   color: #000000;
   font-family: Raleway;
   font-weight: 700;
@@ -57,13 +60,34 @@ ul {
 }
 
 .items {
+  display: flex;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
 }
 
+/* .items-nav,
+.items-contacts {
+  vertical-align: bottom;
+} */
+
+.items .items-nav + .items-nav {
+  margin-left: 50px;
+}
+
+.header-div .items {
+  margin-left: auto;
+}
+
+.items-contacts + .items-contacts {
+  margin-left: 50px;
+}
+
 .list-nav {
+  display: inline-block;
+  padding-top: 32px;
+  padding-bottom: 32px;
   color: var(--main-text-color);
   text-decoration: none;
   font-style: normal;
@@ -281,12 +305,26 @@ ul {
 /* Портфолио */
 
 .list-buttons {
+  display: flex;
+  padding-left: 0;
+  margin-top: 94px;
+  justify-content: center;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
   text-align: center;
   letter-spacing: 0.03em;
   list-style: none;
+}
+
+.list-buttons li + li {
+  margin-left: 8px;
+}
+
+.button-portfolio {
+  padding: 6px 22px;
+  border: 0;
+  border-radius: 4px;
 }
 
 .button-portfolio:hover,
@@ -297,8 +335,26 @@ ul {
 }
 
 .list-portfolio {
+  display: flex;
+  padding-left: 0;
+  margin-top: 50px;
+  margin-bottom: 94px;
+  flex-wrap: wrap;
   list-style: none;
   text-decoration: none;
+}
+
+.list-portfolio li {
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.list-portfolio li:nth-child(3n) {
+  margin-right: 0;
+}
+
+.list-portfolio li:nth-last-child(-n + 3) {
+  margin-bottom: 0;
 }
 
 .list-item {
@@ -307,6 +363,19 @@ ul {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+}
+
+.link-portfolio .list-item {
+  margin-top: 20px;
+  margin-bottom: 4px;
+  margin-left: 24px;
+  margin-right: 24px;
+}
+
+.link-portfolio .list-page {
+  margin-bottom: 20px;
+  margin-left: 24px;
+  margin-right: 24px;
 }
 
 .list-page {
