--- a/css/style.css
+++ b/css/style.css
@@ -77,12 +77,7 @@ img {
   letter-spacing: 0.02em;
 }
 
-/* .items-nav,
-.items-contacts {
-  vertical-align: bottom;
-} */
-
-.items .items-nav + .items-nav {
+.items .items-nav:not(:first-child) {
   margin-left: 50px;
 }
 
@@ -90,7 +85,7 @@ img {
   margin-left: auto;
 }
 
-.items-contacts + .items-contacts {
+.items-contacts:not(:first-child) {
   margin-left: 50px;
 }
 
@@ -183,7 +178,7 @@ img {
   display: flex;
 }
 
-.features li + li {
+.features li:not(:first-child) {
   margin-left: 30px;
 }
 
@@ -218,7 +213,7 @@ img {
   padding-left: 0;
 }
 
-.granting li + li {
+.granting li:not(:first-child) {
   margin-left: 30px;
 }
 
@@ -241,7 +236,7 @@ img {
   background-color: var(--button-color);
 }
 
-.command-list li + li {
+.command-list li:not(:first-child) {
   margin-left: 30px;
 }
 
@@ -345,7 +340,7 @@ img {
   list-style: none;
 }
 
-.list-buttons li + li {
+.list-buttons li:not(:first-child) {
   margin-left: 8px;
 }
 
@@ -371,8 +366,10 @@ img {
 }
 
 .list-portfolio li {
+  width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
+  border: 1px solid #eeeeee;
 }
 
 .list-portfolio li:nth-child(3n) {
@@ -383,25 +380,16 @@ img {
   margin-bottom: 0;
 }
 
+.description {
+  padding: 20px 24px;
+}
+
 .list-item {
   color: var(--main-text-color);
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
-}
-
-.link-portfolio .list-item {
-  margin-top: 20px;
-  margin-bottom: 4px;
-  margin-left: 24px;
-  margin-right: 24px;
-}
-
-.link-portfolio .list-page {
-  margin-bottom: 20px;
-  margin-left: 24px;
-  margin-right: 24px;
 }
 
 .list-page {
